# Time-synced-lyrics

./: .cfignore  .dockerignore  .gitignore  .prettierignore  Cargo.toml  check-version-changed.js  docker-compose.prod.yml  docker-compose.yml  dockerfile  eslint.config.mjs  index.html  jsconfig.json  launch tailwind-cli.bat  package-lock.json  package.json  readme.md  script.js  song_list.json  style.css  tsconfig.app.json  tsconfig.app.tsbuildinfo  version-generator.js  vite.config.ts
.github/workflows/: build.yml  check.yml
data/: hmac_private_key
lrc/: Arc - Taiwan Destroyed.lrc  Kenshi Yonezu - Campanella.lrc  Kenshi Yonezu - KANDEN.lrc  Kiro Akiyama - SKETCH.lrc  Shytaupe - It's myself.lrc
mappings/HOYO-MiX, Chevy, Robin - Hope Is the Thing With Feathers/: live.json  original.json
mappings/HOYO-MiX, Vision Wei, Nea - On the Journey/: instrumental.json  original.json
mappings/Kenshi Yonezu - Campanella/: original.json
mappings/Kenshi Yonezu, Hikaru Utada - JANE DOE/: original.json
mappings/Kiro Akiyama - SKETCH/: live.json  original.json
mappings/Kocchi no Kento - Kekka Orai/: original.json
mappings/Laurence Larson - A Stranger/: original.json
mappings/Mrs GREEN APPLE - lulu/: original.json
mappings/Mrs Green Apple - Bokuno Koto/: original.json
mappings/Mrs Green Apple - Norn/: original.json
mappings/Mrs Green Apple, Sonoko Inoue - Tenbyouno Uta/: original.json
mappings/Omoinotake - One Day/: original.json
mappings/Vaundy - Gift/: original.json
mappings/Vaundy - Saikai/: original.json
mappings/Vaundy - Shiwaawase/: original.json
mappings/Vaundy - Yobigoe/: original.json
mappings/Vaundy - replica/: original.json
mappings/amazarashi - Cassiopeia Keiryuujo/: original.json
mappings/yutori - Speed/: original.json
player/: index.html  song-select.html
player/styles/: style.css
player2/: index.html
public/: song_list.json
public/.well-known/: discord
public/lrc/: Kenshi Yonezu - Campanella.lrc  Kenshi Yonezu - KANDEN.lrc  Kiro Akiyama - SKETCH.lrc  Shytaupe - It's myself.lrc  Vaundy - Shiwaawase.lrc
public/mappings/: Kenshi Yonezu - Campanella.json  Kenshi Yonezu - KANDEN.json  Kiro Akiyama - SKETCH.json  Shytaupe - It's myself.json  Vaundy - Shiwaawase.json  amazarashi - Cassiopeia Keiryuujo.json
py_tools/: 003_parse_kt_csv_to_json.py  004_extract_translation_and_bgv.py  005_offset_time_for_diff_versions.py  006_extract_json_from_html.py  007_fill_time_into_json.py  008_parse_lrc_to_json.py  009_xml_to_json.py
scripts/: build.js  check-version-changed.js  pre-commit_bkup.sh  version-generator.js
shell_scripts/: rebuild_docker_image.sh
song-select/: index.html
song-select/styles/: style.css
src/: app.js  error.rs  lib.rs  main.rs  manage.py  parse_lyrics.py  requirements.txt  update_deployment.sh  utils.rs
src/api/: urls.py  views.py
src/database/: artists.rs  find_artist.py  fing_song.py  fing_song_by_id.py  insert_songs_data.py  migrate.py  migrations.json  mod.rs  songs.rs
src/modules/: commit-info.js  config.js  modal.js  player.js  songList.js  utils.js
src/song_lyric_handler/: asgi.py  settings.prod.py  settings.py  settings_prod.py  urls.py  wsgi.py
src/songlyricparser/: asgi.py  settings.py  urls.py  wsgi.py
src/songs/: 1408505419.json  1445145789.json  1538265734.json  1629869580.json  1646398286.json  1691229817.json  1704107222.json  1707027525.json  1714599807.json  1744861537.json  1758905748.json  (+2 more)
src2/: manage.py  requirements.txt
styles/: input.css  main.css  style.css  tailwind.css
web/: app.js  home.js  player.js  song-select.js  types.ts
web2/: App.vue  player.js  song-select.js  types.ts
(+201 files in other folders)
