[package]
name = "tsl_api"
version = "2.0.0"
edition = "2024"

[[bin]]
name = "tsl_exporter"
path = "src/bin/exporter.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
derive_more = "2.1.1"
env_logger = "0.11.9"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.29"
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = "1.49.0"
encoding_rs = "0.8"
serde = { version = "*", features = ["derive"] }

# database
rusqlite = { version = "0.32.0", features = [
    "bundled",
    "uuid",
    "serde_json",
    "chrono",
    "backup",
] }
sea-query = "0.32"
sea-query-rusqlite = { version = "0.7", features = [
    "with-chrono",
    "with-json",
    "with-uuid",
] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
tempfile = "3.25.0"
csv = "1.3"
