[package]
name = "tsl_api"
version = "2.0.0"
edition = "2024"

[[bin]]
name = "tsl_exporter"
path = "src/bin/exporter.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
derive_more = "2.1.1"
env_logger = "0.11.9"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.29"
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
encoding_rs = "0.8"
serde = { version = "*", features = ["derive"] }

# database
rusqlite = { version = "0.32.0", features = [
    "bundled",
    "uuid",
    "serde_json",
    "chrono",
    "backup",
] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
tempfile = "3.25.0"
csv = "1.3"
dotenv = "0.15.0"

# CRUD
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
aws-sdk-s3 = "1"          # 用於 Cloudflare R2 (S3-compatible)
aws-config = "1"
aws-credential-types = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
sea-query = "0.32.7"
sea-query-rusqlite = "0.7.0"
